# EMDUniFrac-rs

./: Cargo.toml  README.md
data/: ASV_counts.txt  table.txt  test_rot_new3.nwk
src/: main.rs
